--- a/Debiru/Info.plist
+++ b/Debiru/Info.plist
@@ -20,9 +20,11 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
 			<key>CFBundleURLName</key>
-			<string>com.mbpolan.debiru</string>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>debiru</string>
